Extend linux-host pack tooling